--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "@angular/platform-browser": "^19.1.0",
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/router": "^19.1.0",
+    "@types/fabric": "^5.3.10",
+    "bootstrap": "^5.3.5",
+    "bootstrap-icons": "^1.11.3",
+    "fabric": "^5.5.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
